Fix navbar collapse

--- a/src/navbar.sass
+++ b/src/navbar.sass
@@ -69,6 +69,8 @@ nav
     left: 0
     transform: translateX(-100%)
     border-right:  var(--border)
+    max-height: 100%
+    overflow: auto
     @media only screen and (min-width: config.$collapse-breakpoint)
       @include horizontal-navbar
       position: static
